fix images not showing up

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -4,7 +4,7 @@
   padding-top: 30px;
   padding-bottom: 74px;
 
-  background: linear-gradient(180deg, #242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%), url(/img/header/header-bg.jpg);
+  background: linear-gradient(180deg, #242b33 11.98%, rgba(45, 52, 60, 0.38) 51.04%, #242b33 92.19%), url(../img/header/header-bg.jpg);
 
   display: flex;
   flex-direction: column;
