--- a/scss/blocks/_info.scss
+++ b/scss/blocks/_info.scss
@@ -22,10 +22,10 @@
   }
 
   &--tel::before {
-    background-image: url("/img/header/phone.svg");
+    background-image: url("../img/header/phone.svg");
   }
 
   &--map::before {
-    background-image: url("/img/header/map.svg");
+    background-image: url("../img/header/map.svg");
   }
 }
